# nowide-standalone

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
VC12/: NoWide.vcxproj  NoWide.vcxproj.filters
boost/nowide/: cenv.hpp  fstream.hpp
docs/: Doxyfile.in  main.txt
include/nowide/: config.hpp
libs/nowide/src/: iostream.cpp
standalone/: CMakeLists.txt  NoWide-VC12.sln  config.hpp  convert  convert.ps1
standalone/VC12/: NoWide.vcxproj  NoWide.vcxproj.filters
standalone/nowide/: CMakeLists.txt
